index adding task

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-# html-file aaaaaaaaaaaaaaaaaaaaa
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>Affair List</title>
+    <script src="/js/jquery-3.4.0.min.js"></script>
+    <script src="/js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+</head>
+<body>
+    <div id="affair-form">
+        <form>
+            <h2>ДОБАВЛЕНИЕ ЗАДАЧИ</h2>
+            <label>Содержание задачи:</label>
+            <input type="text" name="task" value="">
+            <label>Срок исполнения:</label>
+            <input type="text" name="deadline" value="">
+            <hr>
+            <button id="save-affair">Сохранить</button>
+        </form>
+    </div>
+    <h1>Список дел (<span th:text="${affairsCount}">0</span>)</h1>
+    <button id="show-add-affair-form">Добавить задачу</button>
+    <br><br>
+    <div id="affair-list">
+<!--        <h3>Это печатается непосредственно ПЕРЕД списком  (<span th:text="${someWord}">0</span>)</h3>-->
+        <div th:each="affair : ${affairs}">
+<!--            <h4>Это перед EACH OF LIST - (<span th:text="${someWord}">0</span>)</h4>-->
+            <a href="#" class="affair-link" th:attr="data-id=${affair.id}" th:text="${affair.task}"></a>
+        </div>
+<!--        <h3>Это печатается непосредственно ПОСЛЕ списка  (<span th:text="${someWord}">0</span>)</h3><br>-->
+<!--        <h3>А откуда берется все остальное? То, что ниже: </h3>-->
+    </div>
+<!--    <p th:text="${someParameter}"></p>-->
+</body>
