--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div id="affair-form">
         <form>
-            <h2>ДОБАВЛЕНИЕ ЗАДАЧИ</h2>
+            <h2>ADDING TASK</h2>
             <label>Содержание задачи:</label>
             <input type="text" name="task" value="">
-            <label>Срок исполнения:</label>
+            <label>СРОК ИСПОЛНЕНИЯ:</label>
             <input type="text" name="deadline" value="">
             <hr>
             <button id="save-affair">Сохранить</button>
@@ -32,8 +32,3 @@
 <!--        <h3>А откуда берется все остальное? То, что ниже: </h3>-->
     </div>
 <!--    <p th:text="${someParameter}"></p>-->
-<<<<<<< HEAD
-</body>
-=======
-</body>
->>>>>>> 0fac96f9f67b930173af12deda5ea7b3285b2df5
