ADDING TASK ONCE MORE

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="affair-form">
         <form>
-            <h2>ADDING TASK</h2>
+            <h2>ADDING TASK ONCE MORE</h2>
             <label>Содержание задачи:</label>
             <input type="text" name="task" value="">
             <label>СРОК ИСПОЛНЕНИЯ:</label>
