--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="affair-form">
         <form>
-            <h2>ДОБАВЛЕНИЕ ЗАДАЧИ</h2>
+            <h2>ДОБАВЛЕНИЕ НОВОЙ ЗАДАЧИ</h2>
             <label>Содержание задачи:</label>
             <input type="text" name="task" value="">
             <label>Срок исполнения:</label>
