Squashed commit of the following:
commit 8163439f4e2a176e2bcdf3fb7bd339efc4a932eb
Author: lobashev-andrey <lobashev.andrey@mail.ru>
Date:   Mon Jan 9 10:53:00 2023 +0300

    third commit

commit af2b5445c27009c7bd9b152a37c2b1d3e3dac90d
Author: lobashev-andrey <lobashev.andrey@mail.ru>
Date:   Mon Jan 9 10:51:40 2023 +0300

    second

commit e1128861028143f03bdf1d29832f2222cc94359f
Author: lobashev-andrey <lobashev.andrey@mail.ru>
Date:   Mon Jan 9 10:48:33 2023 +0300

    first commit

commit b2763815cca908bcaae2f4203533a9bd35778b9a
Merge: fe8ab8c 501abe9
Author: lobashev-andrey <lobashev.andrey@mail.ru>
Date:   Sun Jan 8 21:13:55 2023 +0300

    MERGING

commit fe8ab8ce209569621fff5c88a688efa2829c7f74
Author: lobashev-andrey <lobashev.andrey@mail.ru>
Date:   Sun Jan 8 20:46:13 2023 +0300

    h2 ABRACADABRA

commit b90855dec6d4f9bab0e62e307206af16481571d4
Author: lobashev-andrey <lobashev.andrey@mail.ru>
Date:   Sun Jan 8 20:45:15 2023 +0300

    h2 AAA

squashed commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="affair-form">
         <form>
-            <h2>ДОБАВЛЕНИЕ НОВОЙ ЗАДАЧИ</h2>
+            <h2>Третий</h2>
             <label>Содержание задачи:</label>
             <input type="text" name="task" value="">
             <label>Срок исполнения:</label>
@@ -32,8 +32,3 @@
 <!--        <h3>А откуда берется все остальное? То, что ниже: </h3>-->
     </div>
 <!--    <p th:text="${someParameter}"></p>-->
-<<<<<<< HEAD
-</body>
-=======
-</body>
->>>>>>> 0fac96f9f67b930173af12deda5ea7b3285b2df5
